updated the paragraphs & css file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     <script type="text/javascript" src="./js/otherJS.js"></script>
 
 
-
     <title>Global Warming</title>
 </head>
 
@@ -54,7 +53,6 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#third_page">Emissions from Fossil Fuel</a>
                             <a class="dropdown-item" href="#forth_page">Cumulative CO₂ emissions</a>
-                            <a class="dropdown-item" href="#">Get in touch</a>
                         </div>
                     </li>
                 </ul>
@@ -151,16 +149,7 @@
             </div>
             <div class="row ">
                 <div class="col-sm-12">
-                    <p class="text_after_graph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam enim doloribus, odio sint veniam velit, in sunt vero, delectus aliquid ducimus voluptas id rerum? Repellendus error libero quo eligendi aut cumque illum soluta earum
-                        dolor tempore! Harum laboriosam ex numquam neque! Inventore perspiciatis eligendi perferendis, debitis praesentium veritatis iusto eius totam minus maxime accusamus porro suscipit enim esse illum labore rem vero. Consequuntur deserunt,
-                        hic sunt optio voluptatibus totam. Cum ratione distinctio iusto optio minima provident? Dicta ad quo deserunt temporibus similique veritatis, sint quis minus mollitia incidunt eius, debitis officia voluptas! Reprehenderit aut,
-                        dolores id commodi et, sapiente quas ipsam excepturi blanditiis consequatur quasi aliquid voluptas quod? Eius velit dicta fugit molestias illum quos quisquam voluptatum facere corporis fugiat optio minima sunt assumenda eveniet
-                        accusantium doloribus recusandae, laudantium voluptas earum unde saepe esse! Facere neque dicta dolor deleniti repudiandae nesciunt quidem odio, nisi sapiente magni error doloremque. Porro distinctio doloremque odit asperiores
-                        adipisci, ipsa excepturi eligendi molestiae quidem aliquam, sequi reprehenderit nulla ab dolorum. Rerum quaerat ullam provident distinctio porro eius ut cumque dolore, voluptatibus impedit, perspiciatis vel beatae tenetur voluptatum!
-                        Doloribus quos aperiam voluptatibus corrupti velit eum soluta, molestias modi cupiditate recusandae tempora veritatis quaerat debitis odio ipsa aut quidem cumque? Assumenda nemo deserunt magnam? Cum dolorum sint, repellat corporis
-                        cupiditate fugit ullam recusandae doloribus impedit explicabo? Quaerat vero ut dolores quam unde et temporibus cumque dolor minus, quasi ipsam dignissimos tenetur adipisci nulla dolorum, omnis expedita nihil facilis fugit corrupti
-                        repudiandae eligendi. Eum pariatur mollitia molestias? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam natus perferendis ipsum exercitationem nostrum, voluptatem sequi reiciendis provident unde. Iusto vero perferendis
-                        sequi quod enim minima delectus reprehenderit assumenda quas atque eius aliquid, esse ullam dolores cumque harum dolorum amet accusamus quidem vitae facilis veritatis perspiciatis! Consequatur placeat culpa veritatis.</p>
+                    <p class="text_after_graph"> This graph illustrates the change in global surface temperature since 1880. The last decade has showed the highest temperatures changes since 200 years!</p>
                 </div>
 
             </div>
@@ -181,16 +170,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <p class="text_after_graph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam enim doloribus, odio sint veniam velit, in sunt vero, delectus aliquid ducimus voluptas id rerum? Repellendus error libero quo eligendi aut cumque illum soluta earum
-                        dolor tempore! Harum laboriosam ex numquam neque! Inventore perspiciatis eligendi perferendis, debitis praesentium veritatis iusto eius totam minus maxime accusamus porro suscipit enim esse illum labore rem vero. Consequuntur deserunt,
-                        hic sunt optio voluptatibus totam. Cum ratione distinctio iusto optio minima provident? Dicta ad quo deserunt temporibus similique veritatis, sint quis minus mollitia incidunt eius, debitis officia voluptas! Reprehenderit aut,
-                        dolores id commodi et, sapiente quas ipsam excepturi blanditiis consequatur quasi aliquid voluptas quod? Eius velit dicta fugit molestias illum quos quisquam voluptatum facere corporis fugiat optio minima sunt assumenda eveniet
-                        accusantium doloribus recusandae, laudantium voluptas earum unde saepe esse! Facere neque dicta dolor deleniti repudiandae nesciunt quidem odio, nisi sapiente magni error doloremque. Porro distinctio doloremque odit asperiores
-                        adipisci, ipsa excepturi eligendi molestiae quidem aliquam, sequi reprehenderit nulla ab dolorum. Rerum quaerat ullam provident distinctio porro eius ut cumque dolore, voluptatibus impedit, perspiciatis vel beatae tenetur voluptatum!
-                        Doloribus quos aperiam voluptatibus corrupti velit eum soluta, molestias modi cupiditate recusandae tempora veritatis quaerat debitis odio ipsa aut quidem cumque? Assumenda nemo deserunt magnam? Cum dolorum sint, repellat corporis
-                        cupiditate fugit ullam recusandae doloribus impedit explicabo? Quaerat vero ut dolores quam unde et temporibus cumque dolor minus, quasi ipsam dignissimos tenetur adipisci nulla dolorum, omnis expedita nihil facilis fugit corrupti
-                        repudiandae eligendi. Eum pariatur mollitia molestias? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam natus perferendis ipsum exercitationem nostrum, voluptatem sequi reiciendis provident unde. Iusto vero perferendis
-                        sequi quod enim minima delectus reprehenderit assumenda quas atque eius aliquid, esse ullam dolores cumque harum dolorum amet accusamus quidem vitae facilis veritatis perspiciatis! Consequatur placeat culpa veritatis.</p>
+                    <p class="text_after_graph"> Carbon emissions per capita are measured as the total amount of carbon dioxide emitted by the country as a consequence of all relevant human (production and consumption) activities, divided by the population of the country.</p>
                 </div>
             </div>
     </Section>
@@ -214,16 +194,11 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <p class="text_after_graph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam enim doloribus, odio sint veniam velit, in sunt vero, delectus aliquid ducimus voluptas id rerum? Repellendus error libero quo eligendi aut cumque illum soluta earum
-                        dolor tempore! Harum laboriosam ex numquam neque! Inventore perspiciatis eligendi perferendis, debitis praesentium veritatis iusto eius totam minus maxime accusamus porro suscipit enim esse illum labore rem vero. Consequuntur deserunt,
-                        hic sunt optio voluptatibus totam. Cum ratione distinctio iusto optio minima provident? Dicta ad quo deserunt temporibus similique veritatis, sint quis minus mollitia incidunt eius, debitis officia voluptas! Reprehenderit aut,
-                        dolores id commodi et, sapiente quas ipsam excepturi blanditiis consequatur quasi aliquid voluptas quod? Eius velit dicta fugit molestias illum quos quisquam voluptatum facere corporis fugiat optio minima sunt assumenda eveniet
-                        accusantium doloribus recusandae, laudantium voluptas earum unde saepe esse! Facere neque dicta dolor deleniti repudiandae nesciunt quidem odio, nisi sapiente magni error doloremque. Porro distinctio doloremque odit asperiores
-                        adipisci, ipsa excepturi eligendi molestiae quidem aliquam, sequi reprehenderit nulla ab dolorum. Rerum quaerat ullam provident distinctio porro eius ut cumque dolore, voluptatibus impedit, perspiciatis vel beatae tenetur voluptatum!
-                        Doloribus quos aperiam voluptatibus corrupti velit eum soluta, molestias modi cupiditate recusandae tempora veritatis quaerat debitis odio ipsa aut quidem cumque? Assumenda nemo deserunt magnam? Cum dolorum sint, repellat corporis
-                        cupiditate fugit ullam recusandae doloribus impedit explicabo? Quaerat vero ut dolores quam unde et temporibus cumque dolor minus, quasi ipsam dignissimos tenetur adipisci nulla dolorum, omnis expedita nihil facilis fugit corrupti
-                        repudiandae eligendi. Eum pariatur mollitia molestias? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam natus perferendis ipsum exercitationem nostrum, voluptatem sequi reiciendis provident unde. Iusto vero perferendis
-                        sequi quod enim minima delectus reprehenderit assumenda quas atque eius aliquid, esse ullam dolores cumque harum dolorum amet accusamus quidem vitae facilis veritatis perspiciatis! Consequatur placeat culpa veritatis.</p>
+                    <p class="text_after_graph"> Emissions measurement is the process of measuring the amount of pollutants, in a gaseous or particulate form, being emitted to the air from a specific source, such as an industrial process. Measurements of emissions can be used to
+                        understand the relative importance of a given source compared to other sources and in developing emissions inventories. <br/>Government or industry personnel use emissions measurements to assess the performance of control strategies.
+                        The gas stream can be measured before and after a pollution control device to determine how efficiently it captures pollutants. Emission measurements also are used to determine compliance with regulations limiting the amount of
+                        pollution that a source may emit. Measurements can be taken over a short time period (e.g., hours), often referred to as a source test, or with methods that measure on a continuous basis, often called continuous emissions monitoring.
+                        Either way, it is important obtain data from samples that are representative of the emission stream using methods that are reliable.</p>
                 </div>
 
             </div>
@@ -245,23 +220,20 @@
             </div>
             <div class="row">
                 <div class="col-sm-12">
-                    <p class="text_after_graph"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quam enim doloribus, odio sint veniam velit, in sunt vero, delectus aliquid ducimus voluptas id rerum? Repellendus error libero quo eligendi aut cumque illum soluta earum
-                        dolor tempore! Harum laboriosam ex numquam neque! Inventore perspiciatis eligendi perferendis, debitis praesentium veritatis iusto eius totam minus maxime accusamus porro suscipit enim esse illum labore rem vero. Consequuntur deserunt,
-                        hic sunt optio voluptatibus totam. Cum ratione distinctio iusto optio minima provident? Dicta ad quo deserunt temporibus similique veritatis, sint quis minus mollitia incidunt eius, debitis officia voluptas! Reprehenderit aut,
-                        dolores id commodi et, sapiente quas ipsam excepturi blanditiis consequatur quasi aliquid voluptas quod? Eius velit dicta fugit molestias illum quos quisquam voluptatum facere corporis fugiat optio minima sunt assumenda eveniet
-                        accusantium doloribus recusandae, laudantium voluptas earum unde saepe esse! Facere neque dicta dolor deleniti repudiandae nesciunt quidem odio, nisi sapiente magni error doloremque. Porro distinctio doloremque odit asperiores
-                        adipisci, ipsa excepturi eligendi molestiae quidem aliquam, sequi reprehenderit nulla ab dolorum. Rerum quaerat ullam provident distinctio porro eius ut cumque dolore, voluptatibus impedit, perspiciatis vel beatae tenetur voluptatum!
-                        Doloribus quos aperiam voluptatibus corrupti velit eum soluta, molestias modi cupiditate recusandae tempora veritatis quaerat debitis odio ipsa aut quidem cumque? Assumenda nemo deserunt magnam? Cum dolorum sint, repellat corporis
-                        cupiditate fugit ullam recusandae doloribus impedit explicabo? Quaerat vero ut dolores quam unde et temporibus cumque dolor minus, quasi ipsam dignissimos tenetur adipisci nulla dolorum, omnis expedita nihil facilis fugit corrupti
-                        repudiandae eligendi. Eum pariatur mollitia molestias? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam natus perferendis ipsum exercitationem nostrum, voluptatem sequi reiciendis provident unde. Iusto vero perferendis
-                        sequi quod enim minima delectus reprehenderit assumenda quas atque eius aliquid, esse ullam dolores cumque harum dolorum amet accusamus quidem vitae facilis veritatis perspiciatis! Consequatur placeat culpa veritatis.</p>
+                    <h3>These countries produce the most CO2 emissions</h3>
+                    <p class="text_after_graph"> Despite long-standing warnings of a climate emergency as well as efforts by some nations to reduce carbon dioxide emissions, the worldwide use of fossil fuels – and with it global greenhouse gas emissions – grew last year. A number
+                        of potential disaster scenarios caused by climate change remain well documented. And yet, increasing demand for coal, oil, and natural gas drove the increase in GHG emissions, according to the International Energy Agency.</p>
                 </div>
 
             </div>
     </section>
 
+
+
+    <!-- Return to the top button-->
+
     <div class="container page">
-        <div class="row">
+        <div class="row ">
             <div class="col-sm-12">
                 <a href="#home_page" class="btn btn-outline-dark btn-lg" role="button" aria-pressed="true">back to the top</a>
             </div>
@@ -269,14 +241,19 @@
     </div>
 
 
+
+
+
+    <!-- Footer part of the page -->
+
     <footer>
         <div class="container_fluid footer">
             <div class="row">
                 <div class="col-sm-4">
-                    This website was created by Rami Fareed for learn purposes and as a project for the school "code institute" and it show case the global warming issues.
+                    This website was created by Rami Fareed for learn purposes and as a project for the school "code institute " and it show case the global warming issues.
                 </div>
                 <div class="col-sm-4">
-                    <a href="https://github.com/RamiFareed1989" target="blank">
+                    <a href="https://github.com/RamiFareed1989 " target="blank">
                         <i class="fa fa-github fa-3x"></i>
                     </a>
                 </div>
