changed the size of footer

--- a/index.html
+++ b/index.html
@@ -249,15 +249,15 @@
     <footer>
         <div class="container_fluid footer">
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-xs-4">
                     This website was created by Rami Fareed for learn purposes and as a project for the school "code institute " and it show case the global warming issues.
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-4">
                     <a href="https://github.com/RamiFareed1989 " target="blank">
                         <i class="fa fa-github fa-3x"></i>
                     </a>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-xs-4">
                 </div>
             </div>
         </div>
