changed github icon

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 </div>
                 <div class="col-sm-4">
                     <a href="https://github.com/RamiFareed1989 " target="blank">
-                        <i class="fa fa-github fa-3x"></i>
+                        <i class="fa fa-github-square fa-3x"></i>
                     </a>
                 </div>
                 <div class="col-sm-4">
