cleaned up the html code a bit

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <link rel="stylesheet" href="css/dc.min.css" type="text/css" />
 
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.11.2/js/all.js" integrity="sha384-b3ua1l97aVGAPEIe48b4TC60WUQbQaGi2jqAWM90y0OZXZeyaTCWtBTKtjW2GXG1" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="./js/graphs1.js"></script>
-    <script type="text/javascript" src="./js/graph2.js"></script>
-    <script type="text/javascript" src="./js/graph3.js"></script>
-    <script type="text/javascript" src="./js/graph4.js"></script>
-    <script type="text/javascript" src="./js/otherJS.js"></script>
+    <script src="./js/graphs1.js"></script>
+    <script src="./js/graph2.js"></script>
+    <script src="./js/graph3.js"></script>
+    <script src="./js/graph4.js"></script>
+    <script src="./js/otherJS.js"></script>
 
 
     <title>Global Warming</title>
@@ -31,7 +31,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-navbar">
-            <a class="navbar-brand" href=""><img src="/fotos/globe.png" width="30" height="30" class="d-inline-block align-top" alt=""> Global Warming</a>
+            <a class="navbar-brand" href=""><img src="../fotos/globe.png" width="30" height="30" class="d-inline-block align-top" alt=""> Global Warming</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -119,9 +119,7 @@
                                     <a href="https://bit.ly/2N0Y358" target="blank">https://bit.ly/2N0Y358</a>
                                 </ul>
                             </p>
-
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -152,7 +150,6 @@
                 <div class="col-sm-12">
                     <p class="text_after_graph"> This graph illustrates the change in global surface temperature since 1880. The last decade has showed the highest temperatures changes since 200 years!</p>
                 </div>
-
             </div>
     </section>
 
@@ -203,6 +200,7 @@
                 </div>
 
             </div>
+        </div>
     </section>
 
     <section id="forth_page">
