changed otherJS and did change the name of the function

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 some places dryer, with more intense periods of drought and at the same time making other places wetter, with stronger storms and increased flooding. These changes have affected both nature as well as human society and
                                 will continue to have increasingly worse effects if greenhouse gas emissions continue to grow at the same pace as today. <br /> <a href="https://bit.ly/32B6EBK" target="blank">https://bit.ly/32B6EBK</a></span>
                             </p>
-                            <button onclick="myFunction()" id="myBtn" class="btn btn-success btn-sm">expand</button>
+                            <button onclick="readMore()" id="myBtn" class="btn btn-success btn-sm">expand</button>
                         </div>
                     </div>
                 </div>
