--- a/index.html
+++ b/index.html
@@ -152,8 +152,15 @@
                 <div class="col-lg-12 col-md-6 col-sm-4" id="monthly_chart"></div>
             </div>
             <div class="row ">
-                <div class="col-sm-12">
-                    <p class="text_after_graph"> This graph illustrates the change in global surface temperature since 1880. The last decade has showed the highest temperatures changes since 200 years!</p>
+                <div class="col-sm-4">
+                    <p class="text_after_graph"> The graph above illustrates the change in global surface temperature since 1880. The last decade has showed the highest temperatures changes since 200 years! </br> The picture on the right side is just for entertainment purposes and
+                        show case the changes over the years. For more see the following Link.
+                        <a href="https://go.nasa.gov/32GNril">https://go.nasa.gov/32GNril</a>
+                    </p>
+                </div>
+                <div class="col-md-2"></div>
+                <div class="col-md-6 text_pics">
+                    <img src="../gifs/globe_temperature_change.gif" alt="Globe_Pic" class="img-fluid img-thumbnail">
                 </div>
             </div>
     </section>
