Changed from local fotos to linked fotos

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-navbar">
-            <a class="navbar-brand" href=""><img src="../fotos/earth.png" width="30" height="30" class="d-inline-block align-top" alt=""> Global Warming</a>
+            <a class="navbar-brand" href=""><img src="https://i.ibb.co/vqzvfY7/globe.png" width="30" height="30" class="d-inline-block align-top" alt=""> Global Warming</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
