changed the gif from local to the cloud

--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
             </div>
             <div class="row ">
                 <div class="col-sm-4">
-                    <p class="text_after_graph"> The graph above illustrates the change in global surface temperature since 1880. The last decade has showed the highest temperatures changes since 200 years! </br> The picture on the right side is just for entertainment purposes and
+                    <p class="text_after_graph"> The graph above illustrates the change in global surface temperature since 1880. The last decade has showed the highest temperatures changes since 200 years! </br> The picture next to the text is just for entertainment purposes and
                         show case the changes over the years. For more see the following Link.
                         <a href="https://go.nasa.gov/32GNril">https://go.nasa.gov/32GNril</a>
                     </p>
                 </div>
                 <div class="col-md-2"></div>
                 <div class="col-md-6 text_pics">
-                    <img src="../gifs/globe_temperature_change.gif" alt="Globe_Pic" class="img-fluid img-thumbnail">
+                    <img src="https://i.ibb.co/wh8x6D7/globe-temperature-change.gif" alt="Globe_Pic" class="img-fluid img-thumbnail">
                 </div>
             </div>
     </section>
