minor changes to the html code and project tree

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
                 <div class="col-md-2"></div>
                 <div class="col-md-6 text_pics">
-                    <img src="https://i.ibb.co/wh8x6D7/globe-temperature-change.gif" alt="Globe_Pic" class="img-fluid img-thumbnail">
+                    <img src="https://i.ibb.co/wh8x6D7/globe-temperature-change.gif" alt="globe_temperature_change" class="img-fluid img-thumbnail">
                 </div>
             </div>
     </section>
