added target to A tags

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="col-sm-4">
                     <p class="text_after_graph"> The graph above illustrates the change in global surface temperature since 1880. The last decade has showed the highest temperatures changes since 200 years! </br> The picture next to the text is just for entertainment purposes and
                         show case the changes over the years. For more see the following Link.
-                        <a href="https://go.nasa.gov/32GNril">https://go.nasa.gov/32GNril</a>
+                        <a href="https://go.nasa.gov/32GNril" target="blank">https://go.nasa.gov/32GNril</a>
                     </p>
                 </div>
                 <div class="col-md-2"></div>
