Some changes for the html code

--- a/index.html
+++ b/index.html
@@ -152,13 +152,12 @@
                 <div class="col-lg-12 col-md-6 col-sm-4" id="monthly_chart"></div>
             </div>
             <div class="row ">
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <p class="text_after_graph"> The graph above illustrates the change in global surface temperature since 1880. The last decade has showed the highest temperatures changes since 200 years! </br> The picture next to the text is just for entertainment purposes and
                         show case the changes over the years. For more see the following Link.
                         <a href="https://go.nasa.gov/32GNril" target="blank">https://go.nasa.gov/32GNril</a>
                     </p>
                 </div>
-                <div class="col-md-2"></div>
                 <div class="col-md-6 text_pics">
                     <img src="https://i.ibb.co/wh8x6D7/globe-temperature-change.gif" alt="globe_temperature_change" class="img-fluid img-thumbnail">
                 </div>
@@ -179,8 +178,19 @@
                 <div class="col-lg-12 col-md-6 col-sm-4" id="emissions_chart"></div>
             </div>
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-6">
                     <p class="text_after_graph"> Carbon emissions per capita are measured as the total amount of carbon dioxide emitted by the country as a consequence of all relevant human (production and consumption) activities, divided by the population of the country.</p>
+                    <p class=""><b>The greenhouse gases that humans do emit directly in significant quantities are:</b> </br>
+                        <ul>
+                            <li>Carbon dioxide (CO2). Accounts for around three-quarters of the warming impact of current human greenhouse-gas emissions.</li>
+                            <li>Methane (CH4).</li>
+                            <li>Nitrous oxide (N2O).</li>
+                            <li>Fluorinated gases ("F gases").</li>
+                        </ul>
+                    </p>
+                </div>
+                <div class="col-md-6 text_pics">
+                    <img src="https://i.ibb.co/yF1JSDF/emissions-per-capita.jpg" alt="globe_temperature_change" class="img-fluid img-thumbnail">
                 </div>
             </div>
     </Section>
