minor changes for the html code

--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@
                             <li>Nitrous oxide (N2O).</li>
                             <li>Fluorinated gases ("F gases").</li>
                         </ul>
+
+                        <a href="https://bit.ly/31ITsJU" target="blank">https://bit.ly/31ITsJU</a>
                     </p>
                 </div>
                 <div class="col-md-6 text_pics">
