--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 </div>
             </div>
             <div class="row ">
-                <div class="col-lg-12 col-md-6 col-sm-4" id="cumulative_carbon_emissions">
+                <div class="col-lg-12 col-md-6 col-sm-3" id="cumulative_carbon_emissions">
 
                 </div>
             </div>
@@ -273,7 +273,7 @@
         <div class="container_fluid footer">
             <div class="row">
                 <div class="col-sm-4">
-                    This website was created by Rami Fareed for learn purposes and as a project for the school "code institute" and it show case the global warming issues.
+                    This website was created by Rami Fareed for learning purposes and as a project for the school "code institute" and it show case the global warming issues.
                 </div>
                 <div class="col-sm-4">
                     <a href="https://github.com/RamiFareed1989 " target="blank">
