changed html pic

--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
             </div>
             <div class="row ">
                 <div class="col-sm-6">
-                    <p class="text_after_graph"> The graph above illustrates the change in global surface temperature since 1880. The last decade has showed the highest temperatures changes since 200 years! </br> The picture next to the text is just for entertainment purposes and
-                        show case the changes over the years. For more see the following Link.
-                        <a href="https://go.nasa.gov/32GNril" target="blank">https://go.nasa.gov/32GNril</a>
+                    <p class="text_after_graph"> The graph above illustrates the change in global surface temperature since 1880. The last decade has showed the highest temperatures changes since 200 years! </br> The picture next to the text is just for ilustration purposes and show
+                        case the horrific consequences of ignoring global warming. For more see the following Link.
+                        <a href="https://bit.ly/2PnAruh" target="blank">https://bit.ly/2PnAruh</a>
                     </p>
                 </div>
                 <div class="col-md-6 text_pics">
-                    <img src="https://i.ibb.co/wh8x6D7/globe-temperature-change.gif" alt="globe_temperature_change" class="img-fluid img-thumbnail">
+                    <img src="https://i.ibb.co/t4Ym1Qt/woodfire.jpg" alt="wood fire" class="img-fluid img-thumbnail">
                 </div>
             </div>
     </section>
