finalized the readme

--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
         </div>
     </section>
 
+    <!-- Forth Page that contains more data */ -->
+
+
     <section id="forth_page">
 
         <div class="container page">
